# PyPulsar

./: .gitignore  README.md  pyproject.toml
photon/: engine.py
plugins/notifications/: notify.py
pyphoton/: __main__.py  cli.py  engine.py
pyphoton/templates/basic/: main.py  requirements.txt
pypulsar/: cli.py  window_manager.py
pypulsar/engine/: android_engine.py  base_engine.py  desktop_engine.py
pypulsar/ipc/: api.py
pypulsar/plugins/: plugin_manager.py
pypulsar/templates/android/: pyproject.toml  requirements.txt
pypulsar/templates/android/src/pypulsar_basic/: __main__.py
pypulsar/templates/android/src/pypulsar_basic/app/: main.py
pypulsar/templates/basic/: main.py  requirements.txt
pypulsar/templates/basic/web/: index.html
pypulsar/templates/react_advanced/: README.md  main.py  requirements.txt
pypulsar/templates/react_advanced/web/: index.html  package-lock.json  package.json  vite.config.js
pypulsar/templates/react_advanced/web/src/: App.jsx  index.css  main.jsx
pypulsar/templates/react_advanced/web/src/components/: Counter.jsx  Files.jsx  Home.jsx  Settings.jsx
pypulsar/templates/react_advanced/web/src/utils/: api.js
pypulsar/templates/react_basic/: main.py
pypulsar/templates/react_basic/web/: index.html  package-lock.json  package.json  vite.config.js
pypulsar/templates/react_basic/web/src/: App.jsx  index.css  main.jsx
pypulsar/templates/react_basic/web/src/utils/: api.js
